# cogito

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/: cogito.py
examples/: mnist.c  xor.c
include/: cg_arena.h  cg_bf16.h  cg_cuda.h  cg_datasets.h  cg_flash_attn.h  cg_flash_attn_kernels.h  cg_fusion.h  cg_grad_check.h  cg_jit.h  cg_layers.h  cg_loss.h  cg_memory.h  cg_optim.h  cg_pipeline.h  cg_profiler.h  cg_quantize.h  cg_serialization.h  cg_speculative.h  cg_symbolic.h  cg_tensor.h  cg_tensor_kernels.h  cg_transformer.h  cogito.h
src/attention/: flash_attn.c
src/core/: autograd.c  bf16.c  broadcast.c  graph.c  serialization.c  symbolic.c  tensor.c  tensor_ops.c
src/cuda/: cg_cuda.c  flash_attn_kernels.c  tensor_kernels.c
src/datasets/: mnist.c
src/inference/: speculative.c
src/jit/: fusion.c  graph_capture.c
src/layers/: activations.c  conv2d.c  linear.c  loss.c  normalization.c  transformer.c
src/memory/: planner.c
src/optim/: adam.c  optimizer.c  sgd.c
src/pipeline/: pipeline.c  tensor_parallel.c
src/quantize/: int4.c
src/utils/: arena.c  dataloader.c  grad_check.c  profiler.c
tests/: test_autograd.c  test_cuda.c  test_memory_extended.c  test_tensor.c
